2004-06-10 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-task-dialog.[ch]: implemented undo for predecessor
	task dialog editor (add/remove predecessor, edit a predecessor)
	
2004-06-08  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-object.c: (mrp_object_get_project):
	* libplanner/mrp-object.h:
	* libplanner/mrp-project.h: Small hack to avoid a lot of
	g_object_get.
	
	* src/planner-gantt-model.c: (gantt_model_get_value): Use
	work_start instead of start for display and use the getters
	instead of g_object_get in the get_value function.

2004-06-07 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-task-dialog.c: implemented undo for resource
	assignment to task (assign resource, remove resource, change
	units assigned). 

	Use planned_cmd_new API in all the undo code.

	Changes in undo functions in order to be more understable.
	
2004-06-06 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-task-dialog.c: implemented undo milestone and 
	fixed duration in task dialog.
	
2004-06-04 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-task-dialog.c: implemented undo for all the fields
	in the first page of the task dialog editor notebook, except 
	milestone and fixed duration.

	* src/planner-resource-view.c: fixed memory leaks using GValues.

	* src/planner-task-tree.c: fixed memory leaks using GValues.
	

2004-06-03  Setul Patel  <setulkumarpatel@yahoo.com>

	* data/ui/main-window.ui: Fix bug #143662.
	
2004-06-02  Richard Hult  <richard@imendio.com>

	* Commit patch from Lincoln Phipps to fix bug #140694.
	
2004-05-20  Richard Hult  <richard@imendio.com>

	* configure.in: Fix aclocal flags. Bump version to 0.11.90.	

	* autogen.sh: Revert change from Tomasz.

2004-05-18 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-task-tree.c: implemented custom properties editing undo
	and reset costraints undo.

2004-05-14  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	* src/planner-python-plugin.c: