@@ -1,3 +1,8 @@
+2004-06-12 Alvaro del Castillo  <acs@barrapunto.com>
+
+	* src/planner-task-tree.c: moved undo code to planner-task-dialog
+	in last commit but failed to commit this file.
+
 2004-06-10 Alvaro del Castillo  <acs@barrapunto.com>
 
 	* src/planner-task-dialog.[ch]: implemented undo for predecessor
